[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-utils = "0.1.2"
log = "0.4.6"
wasm-bindgen = "0.2.79"
wasm-logger = "0.2.0"
web-sys = {version = "0.3.56", features = [
  "DataTransfer",
  "DataTransferItemList",
  "DataTransferItem",
  "Document",
  "Element",
  "HtmlImageElement",
  "Url",
  'Blob'
]}
yew = "0.19"
